small layout bugs fixed
- @extend button it will extend bootstraps lib
- map fix
- make the stats table smaller

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -51,6 +51,14 @@ $buttonBgHover: #ffffff;
 
 // mixin declaration
 
+img{
+    max-width: 100%;
+}
+
+.Map img{
+    max-width: none;
+}
+
 a.collective_label {
     &:hover {
         text-decoration: none !important;
@@ -103,6 +111,10 @@ div.teamMembers {
 
 .pad_left {
     padding: 0 10px;
+}
+
+.marg_top {
+    margin: 10px 0;
 }
 
 
@@ -278,7 +290,7 @@ div.signPage {
 }
 
 .blue {
-  @extend button;
+  // @extend button;
   background: $buttonBg;
   color: $buttonColor;
   text-decoration:none;
@@ -597,7 +609,7 @@ nav#secondary {
 div.stats {
   @include background($objBg);
   @include box-shadow(#ccc 0px 2px 5px);
-  padding: 2px 10px 2px 10px;
+  padding: 8px 10px;
   float: left;
   color: $TextColor;
   width: 147px;
